# jankcc

./: .gitignore  Cargo.toml  README.md  compile_and_run.sh
C_Testfiles/dev_case/: dev_case.ast  dev_case.c  dev_case.i
C_Testfiles/hashmap/: hashmap.ast  hashmap.i
C_Testfiles/hello_world/: hello_world.ast  hello_world.c  hello_world.i
C_Testfiles/minimal/: minimal.ast  minimal.c  minimal.i
header_fixes/: fix.h
src/: main.rs
src/cranelift_backend/: helpers.rs  mod.rs  translate_function.rs
src/environment_builder/: constant_expr.rs  ext_type.rs  mod.rs  symbol_table.rs
src/environment_builder/tests/: mod.rs  pretty_type.rs
src/environment_builder/walker/: mod.rs  static_and_constant_expr.rs  walk_expressions.rs  walk_func.rs
src/environment_builder/walker/expressions/: mod.rs  walk_get_lvalue.rs
src/environment_builder/walker/statements/: compound.rs  for_statement.rs  if_statement.rs  mod.rs  return.rs
src/lexer/: helper_funcs.rs  mod.rs  tests.rs  token_types.rs
src/mir/: blocks.rs  function.rs  mod.rs  programm.rs  types.rs
src/mir/display_impl/: mod.rs
src/mir/instruction/: location.rs  mod.rs  value.rs
src/parser/: mod.rs  span.rs  tests.rs  tokens.rs  types.rs
src/parser/parse_nodes/: declarations.rs  expressions.rs  mod.rs  statements.rs
src/parser/tests/: decl.rs  expr.rs  mod.rs  statement_tests.rs  type_names.rs  whole_tests.rs
src/preprocessor/: mod.rs
tests/: basic_integration.rs  common.rs
tests/source_files/: fib_easy_blocks.c  fib_harder_blocks.c  hello_world.c  simple_add.c
