[package]
name = "jankcc"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dev-dependencies]
pretty_assertions = "1.2"