[package]
name = "jankcc"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
structopt = "0.3"
serde = { version = "1.0", features = ["derive","rc"] }
serde_yaml = "0.8"
cranelift = "0.87.1"
cranelift-module = "0.87.1"
cranelift-object = "0.87.1"
bimap = { version = "0.6.2", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.2"

[profile.bench]
debug = true
